--- a/style.css
+++ b/style.css
@@ -26,43 +26,48 @@ main {
 }
 
 .controller {
-  position: absolute;
-  top: 100%;
-  transform: translateY(-100%);
-  width: 100%;
-  height: 10%;
+  transform: translateY(-130%);
+  width: 550px;
+  margin: auto;
   text-align: center;
+}
+
+.controllers{
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px auto;
+  width: 100%;
 }
 
-.controllerHidden {
+.hiddenControll img {
+  width: 30px;
+  transition: linear 0.3s;
+  transform: rotate(0);
+}
+
+.hiddenControllers{
+  width: 10px;
   display: none;
-  transition: linear 0.2s;
+
 }
 
-#timeVideo {
-  width: 500px;
+.hiddenControllers + .hiddenControll img{
+  transition: linear 0.3s;
+  transform: rotate(180deg) ;
 }
 
 .VolumeVideo {
-  display: none;
-  position: absolute;
   bottom: 100px;
-  right: 500px;
-  transform: rotate(270deg);
+  right: 515px;
   width: 100px;
   margin-right: 20px;
-}
-
-.VolumeVideoShow {
-  display: block;
-}
-
-.hiddenController {
   display: none;
-  animation: ease-out 0.2s;
+}
+
+.VolumeVideoHidden{
+  display: block;
+  width: 100px;
 }
 
 .bttn {
