--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ main {
   display: grid;
   place-items: center;
   height: 100%;
+  background-color: #333;
 }
 
 .container {
@@ -23,6 +24,7 @@ main {
 
 #video {
   width: 100%;
+  border-radius: 10px;
 }
 
 .controller {
