--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ input[type="range"]{
   bottom: 90px;
   border-radius: 10px;
 
-  display: flex;
+  display: none;
   justify-content: center;
   align-content: center;
 }
