--- a/style.css
+++ b/style.css
@@ -13,26 +13,21 @@ body {
 main {
   display: grid;
   place-items: center;
+  width: 100%;
   height: 100%;
 }
 
 .container {
-  width: 1280px;
-  height: 720px;
+  max-width: 70%;
   position: absolute;
 }
 
-#video {
-  width: 100%;
-  border-radius: 10px;
-}
-
 #videoAudio{
+  max-width: 100%;
   position: relative;
 }
 
 .controller {
-  width: 100%;
   position: absolute;
   bottom: 10px;
   text-align: center;
@@ -52,30 +47,34 @@ main {
 }
 
 .controllers{
-  width: 12%;
+  width: 20%;
 }
 
-.progress{
+.progress {
   width: 100%;
 }
 
 #progress{
   accent-color:black;
-  width: 90%;
+  display: inline-flex;
+  width: 80%;
+  position: relative;
 }
 
 input[type="range"]{
   accent-color:black;
+  position: absolute;
+  top: 3px;
 }
 
 .controlVol{
   background-color: white;
-  width: 150px;
-  height: 50px;
+  width: 176px;
+  height: 30px;
   transform: rotate(270deg);
   position: absolute;
   left: 40px;
-  bottom: 90px;
+  bottom: 120px;
   border-radius: 10px;
 
   display: none;
